@@ -1,2 +1,16 @@
+GLOBAL SETTINGS
+---
 to build jar library use mvn build:
 mvn clean compile assembly:single
+
+
+FX FONT CHOOSER
+---
+To run this application its needed to set VM options like this:
+--module-path "libs\javafx-sdk-11.0.2\lib" --add-modules javafx.controls
+
+HUMAN
+---
+
+JPA CREATOR
+---
